Docs on EvolveBuilder and EvolveClient

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="EvolveJS is a simple and advanced discord api library">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">  
+  <link
+  rel="stylesheet"
+  href="https://cdn.materialdesignicons.com/5.3.45/css/materialdesignicons.min.css"
+/>
   <div id="app"></div>
   <script>
     window.$docsify = {
